add HATEOAS links